# postino

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/agent/: auth_google.py  config.py  deps.py  email_parse.py  executive_brief.py  google_calendar.py  graph.py  imap_client.py  llm_openrouter.py  logging.py  main.py  meeting_links.py  models.py  priority.py  recaps.py  rfc822.py  state_store.py  validate_event.py
src/agent/nodes/: classify_email.py  create_calendar_event.py  decide_actions.py  draft_reply.py  extract_event.py  file_email.py  persist_state.py  priority_score.py  validate_event.py
tests/: test_calendar_node.py  test_decide_actions.py  test_draft_reply_node.py  test_email_parse.py  test_graph_nodes.py  test_imap_client.py  test_llm_language.py  test_llm_openrouter.py  test_main_backfill.py  test_main_process_one_uid.py  test_state_store.py  test_validate_event.py
